refactor: collect(Collectors.toList()) -> toList() 변경